Fixed dark mode colors

--- a/static/assets/css/screen.css
+++ b/static/assets/css/screen.css
@@ -767,14 +767,14 @@ video {
 
 @media(prefers-color-scheme: dark) {
 	:root {
-        --primary-color: #faed26;
-	    --secondary-color: #0091D5;
-	    --font-color: #e8e8f0;
-	    --bg-color: #222;
-	    --heading-color: #e8e8f0;
-        --meta-color: #9e9e9e;
-        --font-family: Lora, "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        --font-meta: Raleway, "Avenir Next", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        --primary-color: #E07A5F;
+        --secondary-color: #81B29A;
+        --font-color: #f4f1de;
+        --bg-color: #2C2F3A;
+        --heading-color: #81B29A;
+        --meta-color: #55868C;
+        --font-family: "Noto Serif", serif,  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        --font-meta: "Lato",  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
         --font-size-standard: 20px;
     } 
 }
